<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lm_scroll_view"
    android:layout_width="@dimen/left_menu_size"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:overScrollMode="never"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="1.0">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lm_settings_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:drawablePadding="10dp"
            android:fontFamily="@font/gothampro"
            android:gravity="center"
            android:text="@string/left_menu_category_settings_text"
            android:textColor="@color/light_blue"
            android:textSize="@dimen/left_menu_text"
            app:drawableStartCompat="@drawable/icon_settings" />

        <ImageView
            android:id="@+id/lm_first_division_rectangle"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:clickable="false"
            android:contentDescription="@string/cd_division_rectangle"
            android:src="@drawable/division_rectangle"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/lm_pencil_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:drawablePadding="10dp"
            android:fontFamily="@font/gothampro"
            android:gravity="center"
            android:text="@string/left_menu_category_pencil_text"
            android:textColor="@color/black"
            android:textSize="@dimen/left_menu_text"
            app:drawableStartCompat="@drawable/icon_pencil" />

        <ImageView
            android:id="@+id/lm_second_division_rectangle"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:clickable="false"
            android:contentDescription="@string/cd_division_rectangle"
            android:src="@drawable/division_rectangle"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/lm_hub_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:drawablePadding="10dp"
            android:fontFamily="@font/gothampro"
            android:gravity="center"
            android:text="@string/left_menu_category_hub_text"
            android:textColor="@color/black"
            android:textSize="@dimen/left_menu_text"
            app:drawableStartCompat="@drawable/icon_hub" />

        <TextView
            android:id="@+id/lm_repository_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:drawablePadding="10dp"
            android:fontFamily="@font/gothampro"
            android:gravity="center"
            android:text="@string/left_menu_category_repository_text"
            android:textColor="@color/black"
            android:textSize="@dimen/left_menu_text"
            app:drawableStartCompat="@drawable/icon_repository" />

        <TextView
            android:id="@+id/lm_tags_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:drawablePadding="10dp"
            android:fontFamily="@font/gothampro"
            android:gravity="center"
            android:text="@string/left_menu_category_tags_text"
            android:textColor="@color/black"
            android:textSize="@dimen/left_menu_text"
            app:drawableStartCompat="@drawable/icon_tag" />

        <TextView
            android:id="@+id/lm_bookmark_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:drawablePadding="10dp"
            android:fontFamily="@font/gothampro"
            android:gravity="center"
            android:text="@string/left_menu_category_bookmarks_text"
            android:textColor="@color/black"
            android:textSize="@dimen/left_menu_text"
            app:drawableStartCompat="@drawable/icon_bookmark" />

        <TextView
            android:id="@+id/lm_basket_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:drawablePadding="10dp"
            android:fontFamily="@font/gothampro"
            android:gravity="center"
            android:text="@string/left_menu_category_basket_text"
            android:textColor="@color/light_red"
            android:textSize="@dimen/left_menu_text"
            app:drawableStartCompat="@drawable/icon_basket" />

        <ImageView
            android:id="@+id/lm_third_division_rectangle"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:clickable="false"
            android:contentDescription="@string/cd_division_rectangle"
            android:src="@drawable/division_rectangle"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/lm_feedback_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:drawablePadding="10dp"
            android:fontFamily="@font/gothampro"
            android:gravity="center"
            android:text="@string/left_menu_category_feedback_text"
            android:textColor="@color/light_blue"
            android:textSize="@dimen/left_menu_text"
            app:drawableStartCompat="@drawable/icon_feedback" />

    </LinearLayout>
</ScrollView>