<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginStart="24dp"
        android:clickable="false"
        android:contentDescription="@string/cd_red_bookmark"
        android:scaleX="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home_bookmark" />

    <ImageView
        android:id="@+id/rgf_app_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:clickable="false"
        android:contentDescription="@string/cd_icon_launcher"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/rgf_page_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:fontFamily="@font/gothampro_bold"
        android:text="@string/register_text"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgf_app_icon" />

    <androidx.cardview.widget.CardView
        android:id="@+id/rgf_entrance_cv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="25dp"
        app:cardBackgroundColor="@color/main_color"
        app:cardCornerRadius="@dimen/login_register_cv_corner_radius"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgf_page_text">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/rgf_username_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@null"
                android:fontFamily="@font/gothampro_medium"
                android:hint="@string/username_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:singleLine="true"
                android:textColorHighlight="@color/light_black"
                android:textCursorDrawable="@drawable/cursor"
                android:textSize="28sp" />

            <ImageView
                android:id="@+id/rgf_first_division_rectangle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:clickable="false"
                android:contentDescription="@string/cd_division_rectangle"
                app:srcCompat="@drawable/division_rectangle" />

            <EditText
                android:id="@+id/rgf_password_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="password"
                android:background="@null"
                android:fontFamily="@font/gothampro_medium"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColorHighlight="@color/light_black"
                android:textCursorDrawable="@drawable/cursor"
                android:textSize="28sp" />

            <ImageView
                android:id="@+id/rgf_second_division_rectangle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:clickable="false"
                android:contentDescription="@string/cd_division_rectangle"
                app:srcCompat="@drawable/division_rectangle" />

            <EditText
                android:id="@+id/rgf_email_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="emailAddress"
                android:background="@null"
                android:fontFamily="@font/gothampro_medium"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColorHighlight="@color/light_black"
                android:textCursorDrawable="@drawable/cursor"
                android:textSize="28sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/rgf_entrance_icon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="-30dp"
        android:contentDescription="@string/cd_icon_entrance"
        android:elevation="2dp"
        app:layout_constraintEnd_toEndOf="@+id/rgf_entrance_cv"
        app:layout_constraintStart_toStartOf="@+id/rgf_entrance_cv"
        app:layout_constraintTop_toBottomOf="@+id/rgf_entrance_cv"
        app:srcCompat="@drawable/confirm" />

    <Button
        android:id="@+id/rgf_login_cv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:backgroundTint="@color/light_red"
        android:fontFamily="@font/gothampro_bold"
        android:letterSpacing="0.03"
        android:outlineProvider="none"
        android:paddingTop="9dp"
        android:paddingBottom="9dp"
        android:text="@string/login_text"
        android:textColor="@color/black"
        android:textSize="@dimen/login_register_button_size"
        app:cornerRadius="@dimen/login_register_button_corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgf_entrance_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>