<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <EditText
        android:id="@+id/tcf_name_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:background="@null"
        android:fontFamily="@font/gothampro_medium"
        android:hint="@string/tc_name_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLength="20"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHighlight="@color/light_black"
        android:textCursorDrawable="@drawable/cursor"
        android:textSize="45sp"
        app:layout_constraintEnd_toStartOf="@+id/tcf_confirm_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/tcf_first_division_rectangle"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:layout_marginTop="16dp"
        android:clickable="false"
        android:contentDescription="@string/cd_division_rectangle"
        android:scaleY="1.5"
        android:src="@drawable/division_rectangle"
        app:layout_constraintEnd_toEndOf="@+id/tcf_name_et"
        app:layout_constraintStart_toStartOf="@+id/tcf_name_et"
        app:layout_constraintTop_toBottomOf="@+id/tcf_name_et" />

    <ImageView
        android:id="@+id/tcf_confirm_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="25dp"
        android:contentDescription="@string/cd_icon_confirm"
        app:layout_constraintBottom_toBottomOf="@+id/tcf_name_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tcf_name_et"
        app:srcCompat="@drawable/icon_confirm" />

    <TextView
        android:id="@+id/tcf_tags_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="25dp"
        android:clickable="false"
        android:fontFamily="@font/gothampro"
        android:text="@string/tc_tags_text"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tcf_first_division_rectangle"
        app:layout_constraintTop_toBottomOf="@+id/tcf_first_division_rectangle" />

</androidx.constraintlayout.widget.ConstraintLayout>